--- a/3dcardLOL/styles/styles.css
+++ b/3dcardLOL/styles/styles.css
@@ -9,14 +9,15 @@ body {
   height: 100vh; /* Define a altura do body para 100% da altura da viewport */
   margin: 0; /* Remove a margem padrão do body */
   display: flex; /* Define o display do body como flexbox */
-  justify-content: center; /* Alinha os itens do body no centro horizontalmente */
+  flex-wrap: wrap;
+  justify-content: space-around; /* Alinha os itens do body no centro horizontalmente */
   align-items: center; /* Alinha os itens do body no centro verticalmente */
   background-color: #e91e63; /* Define a cor de fundo do body */
 }
 
 .card {
-  width: 455px; /* Define a largura do card */
-  height: 300px; /* Define a altura do card */
+  width: 255px; /* Define a largura do card */
+  height: 500px; /* Define a altura do card */
   position: relative; /* Define a posição do card como relativa */
   display: flex; /* Define o display do card como flexbox */
   justify-content: center; /* Alinha os itens do card no centro horizontalmente */
@@ -32,11 +33,11 @@ body {
   height: 100%; /* Define a altura da imagem de capa para 100% */
   object-fit: cover; /* Faz com que a imagem cubra totalmente a área, mantendo a proporção */
 }
-
 .wrapper {
   transition: all 0.5s; /* Define a transição de 0.5 segundos para todas as propriedades */
   position: absolute; /* Define a posição do wrapper como absoluta */
-  width: 100%; /* Define a largura do wrapper para 100% */
+  width: 50%; /* Define a largura do wrapper para 100% */
+  height: 50%;
   z-index: -1; /* Define o índice z do wrapper para -1 */
   background: #000; /* Define a cor de fundo do wrapper como preto */
   border-radius: 30px; /* Define o arredondamento das bordas do wrapper */
@@ -102,27 +103,12 @@ body {
   height: 120px; /* Define a altura como 120px ao passar o mouse sobre o card */
 }
 
-.logo {
-  width: 100%; /* Define a largura da logo para 100% */
-  transition: 0.5s; /* Define a transição de 0.5 segundos para a logo */
-  position: absolute; /* Define a posição da logo como absoluta */
-  bottom: -20px; /* Define a posição da logo 20px abaixo do bottom */
-}
-
-.card:hover .logo {
-  transform: translate3d(
-    0%,
-    -50px,
-    100px
-  ); /* Transforma a logo ao passar o mouse sobre o card */
-}
-
 .card:hover .cover-image {
   opacity: 0.3; /* Define a opacidade da imagem de capa como 0.3 ao passar o mouse sobre o card */
 }
 
 .character {
-  width: 100%; /* Define a largura do character para 100% */
+  width: 40%; /* Define a largura do character para 100% */
   opacity: 0; /* Define a opacidade inicial do character como 0 */
   transition: all 0.5s; /* Define a transição de 0.5 segundos para todas as propriedades do character */
   filter: drop-shadow(
@@ -130,6 +116,10 @@ body {
   ); /* Define um filtro de sombra projetada para o character */
   position: absolute; /* Define a posição do character como absoluta */
   z-index: -1; /* Define o índice z do character como -1 */
+}
+
+.skye{
+  width: 80%;
 }
 
 .card:hover .character {
